# tenten

./: Cargo.toml  README.md
examples/: llama-3.1-8b.rs
src/: backward.rs  cuda.rs  dtype.rs  init.rs  lib.rs  losses.rs  ops.rs  process_group.rs  tensor.rs  util.rs
src/ops/: abs.rs  add.rs  add_assign.rs  add_scalar.rs  all_close.rs  and.rs  broadcast_along.rs  choose.rs  chunk_along.rs  clamp.rs  concat_along.rs  conv1d.rs  conv2d.rs  cos.rs  defer.rs  div.rs  div_scalar.rs  dot.rs  dropout.rs  eq.rs  eq_scalar.rs  exp.rs  fill_with.rs  fill_with_ones.rs  fill_with_zeros.rs  gather_along.rs  ge.rs  ge_scalar.rs  gelu_approx.rs  gelu_true.rs  gt.rs  gt_scalar.rs  le.rs  le_scalar.rs  ln.rs  log_softmax_along.rs  logsumexp_along.rs  lt.rs  lt_scalar.rs  max.rs  (+41 more)
