[package]
name = "tenten"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.12.2", features = ["cuda-12060", "nccl"] }
half = "2.4.1"
rand = "0.8.5"

[features]
cudnn = ["cudarc/cudnn"]
test-phantom = []
test-cpu = []
test-cuda = []
test-f16 = []
test-bf16 = []
test-f32 = []
